# flappy-bird

./: .gitignore  CMakeLists.txt  CMakePresets.json  readme.md  vcpkg.json
src/: CMakeLists.txt  flappy.cpp  flappy.h  main.cpp  pch.h
